tests/examples/snapshots/fail/sorts/sort_inference_error.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/sort_inference_error.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
thread 'main' panicked at 'not yet implemented: handle empty sorts', src/fly/sorts.rs:202:17
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

